# SufrixDashboard

./: .gitignore  eslint.config.js  fix.sh  generate_frontend_prompts.py  package-lock.json  package.json  react_source.txt  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
.github/workflows/: release.yml
frontend_agent_prompts/: 00_setup_infrastructure.md  01_test_auth.md  02_test_dashboard.md  03_test_orgs.md  04_test_branches.md  05_test_users.md  06_test_permissions.md  07_test_menu.md  08_test_inventory.md  09_test_recipes.md  10_test_bundles.md  11_test_discounts.md  12_test_orders.md  13_test_shifts.md  14_test_settings.md  15_test_analytics.md  16_test_public-menu.md  17_test_menu-advisor.md
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: inventory.ts  menu.ts  orders.ts  recipes.ts
src/app/: console-silencer.ts  index.css
src/app/router/: index.tsx
src/components/: Sidebar.jsx
src/components/layout/: Sidebar.tsx
src/components/shared/: DateRangePicker.tsx
src/components/ui/: popover.tsx
src/entities/branch/: queries.ts
src/entities/bundle/: schemas.ts
src/entities/inventory/: schemas.ts
src/entities/menu-advisor/: queries.ts  schemas.ts
src/entities/order/: api.ts
src/entities/org/: api.ts  queries.ts
src/entities/shift/: api.ts
src/entities/user/: queries.ts
src/features/orders-export/: index.ts
src/test/: setup.ts  utils.tsx
src/types/: index.ts
src/utils/: format.ts
(+56 files in other folders)
